<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_application_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.robodroids.raindrop.activity_application_main">

    <TextView
        android:text="@string/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:id="@+id/textView" />
<<<<<<< Updated upstream
    <Button
        android:id="@+id/edit_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_message"
        android:textStyle="bold" />
=======
>>>>>>> Stashed changes

    <Button
            android:text="@string/create_water_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="46dp" android:id="@+id/report_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
        tools:targetApi="23"
        style="@android:style/Widget.Material.Button.Colored" />

    <Button
            android:text="@string/create_quality_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/report_button"
            android:id="@+id/quality_report" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
        tools:targetApi="23"
        style="@android:style/Widget.Material.Button.Colored" />
    <Button
            android:id="@+id/logout_button"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_message"
            android:textStyle="bold"
            android:layout_below="@+id/view_map_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="44dp"
        android:layout_alignParentBottom="true" />

    <Button
<<<<<<< Updated upstream
            android:text="@string/view_water_reports"
=======
            android:text="View Map"
>>>>>>> Stashed changes
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewmapbutton"
            android:layout_marginTop="55dp"
            android:layout_below="@+id/buttonview"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
        tools:targetApi="23"
        style="@android:style/Widget.Material.Button.Colored" />

    <Button
<<<<<<< Updated upstream
            android:text="@string/view_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view_map_button"
            android:layout_marginTop="55dp"
=======
            android:text="View Quality Reports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
>>>>>>> Stashed changes
            android:layout_below="@+id/buttonview"
            android:id="@+id/quality_report_view" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
        tools:targetApi="23"
        style="@android:style/Widget.Material.Button.Colored" />

    <Button
            android:text="View Water Reports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonview"
            android:layout_marginTop="13dp"
        tools:targetApi="23"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_below="@+id/quality_report"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/view_historical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< Updated upstream
        android:layout_below="@+id/view_map_button"
        android:id="@+id/historical_report_view" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
=======
        android:id="@+id/historical_report_view"
        tools:targetApi="23"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_below="@+id/viewmapbutton"
>>>>>>> Stashed changes
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
<<<<<<< Updated upstream
            android:text="@string/view_quality_reports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonview"
            android:id="@+id/quality_report_view" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
=======
        android:id="@+id/edit_button"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="Edit Profile"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
>>>>>>> Stashed changes
</RelativeLayout>
